@@ -1,6 +1,7 @@
 #!/bin/sh -e
 
 cableid=/usr/local/libexec/cable/cable-id
+cablesend=${HOME}/bin/wrappers/cable-send
 confdir=${XDG_CONFIG_HOME}/claws-mail
 
 username=${SECURITY_HOME}/ssl/certs/username
@@ -10,6 +11,11 @@ if address=`${cableid} 2>/dev/null`; then
     if ! grep -q "^address=${address}\$" ${confdir}/accountrc; then
         sed -i "s/^\(address=\).*/\1${address}/" ${confdir}/accountrc
     fi
+fi
+
+# the path has changed
+if ! grep -q "^mail_command=${cablesend}\$" ${confdir}/accountrc; then
+    sed -i "s:^\(mail_command=\).*:\1${cablesend}:" ${confdir}/accountrc
 fi
 
 exec /usr/bin/claws-mail --alternate-config-dir ${confdir} 2>/dev/null "$@"
