@@ -3,6 +3,7 @@ keyring liberte.gpg
 
 cipher-algo AES256
 
+# NOTE: SSL timeout bug in curl, fixed in 7.21.7
 keyserver         hkps://zimmermann.mayfirst.org
 keyserver-options ca-cert-file=~/persist/security/pgp/mfpl.crt
 
