@@ -240,9 +240,8 @@ S=irc.vendetta.com
 
 N=FreeNode
 E=IRC (Latin/Unicode Hybrid)
-F=23
+F=19
 D=0
-S=irc.freenode.net/7000
 S=p4fsi4ockecnea7l.onion
 
 N=GalaxyNet
