@@ -229,15 +229,19 @@ fi
 
 
 sinfo "Compiling custom executables"
-cflags="-std=c99 -Wall -pedantic `portageq envvar CFLAGS` `portageq envvar LDFLAGS`"
-gcc  ${cflags} -o /usr/local/sbin/udev-watchdog    /usr/local/src/udev-watchdog.c -ludev
-gcc  ${cflags} -o /usr/local/sbin/slay             /usr/local/src/slay.c
-gcc  ${cflags} -o /usr/local/bin/hex2base32        /usr/local/src/hex2base32.c
-gcc  ${cflags} -o /usr/local/bin/log-limit         /usr/local/src/log-limit.c
-gcc  ${cflags} -o /usr/local/libexec/cable/service /usr/local/src/cable-service.c
-gcc  ${cflags} -o /usr/local/libexec/cable/daemon  /usr/local/src/cable-daemon.c  -lrt
-gcc  ${cflags} -o /usr/local/libexec/cable/mhdrop  /usr/local/src/cable-mhdrop.c
+mkdir -p /usr/lib/xchat/plugins
 
+cflags="-std=c99 -Wall -pedantic `portageq envvar CFLAGS` `portageq envvar LDFLAGS`"
+gcc  ${cflags} -o /usr/local/sbin/udev-watchdog      /usr/local/src/udev-watchdog.c -ludev
+gcc  ${cflags} -o /usr/local/sbin/slay               /usr/local/src/slay.c
+gcc  ${cflags} -o /usr/local/bin/hex2base32          /usr/local/src/hex2base32.c
+gcc  ${cflags} -o /usr/local/bin/log-limit           /usr/local/src/log-limit.c
+gcc  ${cflags} -o /usr/local/libexec/cable/service   /usr/local/src/cable-service.c
+gcc  ${cflags} -o /usr/local/libexec/cable/daemon    /usr/local/src/cable-daemon.c  -lrt
+gcc  ${cflags} -o /usr/local/libexec/cable/mhdrop    /usr/local/src/cable-mhdrop.c
+gcc  ${cflags} -o /usr/lib/xchat/plugins/cap_sasl.so /usr/local/src/cap_sasl.c -shared -fPIC \
+     -D _GNU_SOURCE -I /usr/include/glib-2.0 -I /usr/lib/glib-2.0/include -Wl,--export-dynamic
+               
 cflags="-Wall `portageq envvar CFLAGS`"
 mkdir -p /usr/local/addons/initrd
 klcc ${cflags} -o /usr/local/addons/initrd/memwipe    /usr/local/src/memwipe.c
@@ -251,7 +255,8 @@ strip -s /usr/local/sbin/udev-watchdog       \
          /usr/local/libexec/cable/daemon     \
          /usr/local/libexec/cable/mhdrop     \
          /usr/local/addons/initrd/memwipe    \
-         /usr/local/addons/initrd/init-kexec
+         /usr/local/addons/initrd/init-kexec \
+         /usr/lib/xchat/plugins/cap_sasl.so
 
 # s/AD/Andorra/;...
 ccrep=`awk -F '\t' '!/^#/ { printf "s/^%s\\\\>/\"%s\"/;", $1, $2 }' /usr/share/zoneinfo/iso3166.tab`
