@@ -74,7 +74,7 @@ net-misc/ssh-askpass-fullscreen
 sys-fs/cryptsetup
 app-crypt/gnupg
 app-crypt/mcrypt
-app-crypt/steghide
+# app-crypt/steghide (masked, #319679)
 app-crypt/ccid
 app-crypt/tpm-tools
 sys-apps/haveged
